# BVH-based-Collision-Detection-Scheme

./: .gitignore  CMakeLists.txt  EG18_FinalPresentation.pptx  LICENSE.md  README.md
Source/Project/Mine/: README.txt  entry_cudaproject.cpp
Source/Project/Mine/Frameworks/AppBase/: AppBase.cpp  AppBase.h  Main.cpp  Main.h
Source/Project/Mine/Frameworks/CudaProject/: CudaProjectApp.cpp  CudaProjectApp.h  CudaProjectModuleRegister.cpp  CudaProjectModuleRegister.h
Source/Project/Mine/base/: AggregatedAttribs.h  Bv.h  MultiArray.h  MultiObject.h  Singleton.h
Source/Project/Mine/collision/auxiliary/: BvhRestrLog.cpp  BvhRestrLog.cu  BvhRestrLog.h  FlOrderLog.cpp  FlOrderLog.cu  FlOrderLog.h  OrderLog.h
Source/Project/Mine/collision/bvtt_front/: BVTTFront.h  BvhCDKernels.cu  BvttFrontGenerateKernels.cu  BvttFrontKeepKernels.cu  BvttFrontLooseInter.cu  BvttFrontLooseInter.h  BvttFrontLooseIntra.cu  BvttFrontLooseIntra.h  BvttFrontLooseKernels.cuh  BvttFrontPruneSproutKernels.cu  BvttFrontReorderKernels.cu  BvttFrontRestructureKernels.cu
Source/Project/Mine/collision/lbvh/: BvhBV.cu  BvhBV.h  BvhExtNode.cu  BvhExtNode.h  BvhIntNode.cu  BvhIntNode.h  BvhPrimitiveNode.cu  BvhPrimitiveNode.h  LBvh.h  LBvhBuildKernels.cu  LBvhFixedDeformable.cu  LBvhFixedDeformable.h  LBvhKernels.cuh  LBvhRestructureKernels.cu  LBvhRigid.cu  LBvhRigid.h  LBvhUpdateKernels.cu
Source/Project/Mine/collision/narrow_phase/: narrow_phase.cu  narrow_phase.cuh
Source/Project/Mine/setting/: BvhSettings.h  BvttFrontSettings.h  CDBenchmarkConfiguration.hpp  CDBenchmarkSettings.cpp  CDBenchmarkSettings.h
Source/Project/Mine/system/CudaDevice/: CudaDevice.cu  CudaDevice.h  CudaKernelLauncher.cu
Source/Project/Mine/system/Log/: Logger.hpp
Source/Project/Mine/system/Logic/: BenchmarkLogic.hpp
Source/Project/Mine/utility/: CudaDeviceUtils.cu  CudaDeviceUtils.h  CudaHostUtils.h  CudaKernelUtils.cu  CudaKernelUtils.cuh  CudaThrustUtils.hpp  CudaTimer.hpp  Meta.h  ModelReader.hpp  Timer.hpp  Utils.h
Source/Project/Mine/world/: Scene.cpp  Scene.h
Tools/FrontAnalyser/: DataExtractor.sln
Tools/FrontAnalyser/DataExtractor/: DataExtractor.vcxproj  Source.cpp
